--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   auto_size_text_field: ^2.2.4
   font_awesome_flutter: ^10.8.0
   shared_preferences: ^2.5.3
+  qr_flutter: ^4.1.0
+  qr_code_scanner_plus: ^2.0.10+1
+  permission_handler: ^11.4.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
